# Anti-Chetater

./: .gitignore  CMakeLists.txt  LICENSE  README.md  anti_cheat_report_P001_20250418_193127.json  anti_cheat_report_P001_20250418_193155.json  anti_cheat_report_P001_20250418_193249.json  anti_cheat_report_P001_20250418_193359.json  anti_cheat_report_P002_20250418_193249.json  anti_cheat_report_P002_20250418_193359.json  anti_cheat_report_P003_20250418_193249.json  anti_cheat_report_P003_20250418_193359.json  player_report_P001_1745015857.json  player_report_P001_1745016111.json  player_report_P001_20250418_193033.json  player_report_P002_1745015857.json  player_report_P002_1745016111.json  player_report_P003_1745015857.json  player_report_P003_1745016111.json  simulate.bat  simulate_ghdl.bat
anti-cheat-dashboard/backend/: main.py  requirements.txt
anti-cheat-dashboard/backend/static/: app.js  styles.css
anti-cheat-dashboard/frontend/: package-lock.json  package.json
anti-cheat-dashboard/frontend/public/: index.html
anti-cheat-dashboard/frontend/src/: App.jsx
anti-cheat-dashboard/frontend/src/components/: Dashboard.jsx
docs/: quantum_anti_cheat_documentation.md
src/: anti_cheat.cpp  anti_cheat.h  anti_cheat_static.cpp  crypto.cpp  crypto.h  game_example.cpp  license.h  main.cpp  memory_monitor.cpp  memory_monitor_example.cpp  player_reputation.py  quantum_anti_cheat.vhd  quantum_anti_cheat_integrated.py  quantum_anti_cheat_tb.vhd  quantum_ml_predictor.py  quantum_simulator.py  utils.cpp  utils.h
static/: app.js  index.html  styles.css
test/: test.cpp
